Fix new food format

--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,6 +1,6 @@
 <div class="form-container">
 <div class="form">
-  <%= form_with(model: @food, url: foods_path, method: :post, scope: :food) do |form| %>
+<%= form_with(model: @food, url: foods_path(user_id: current_user.id), method: :post, scope: :food) do |form| %>
     <h2 class="head-title">Add New Food</h2>
 
     <% if @food.errors.any? %>
