Fix food section

--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -1,10 +1,9 @@
-<div>
-        <tr>
-          <td><%= food.name %></td>
-          <td><%= food.measurement_unit %></td>
-          <td><%= number_to_currency(food.price) %></td>
-          <td>
-          <%= button_to "Delete", food_path(food), class: "delete-link", method: :delete, data: { confirm: "Are you sure about delete #{food.name}?" } %>
-          </td>
-        </tr>
-  </div>
+<tr id="<%= dom_id food %>">
+    <td><%= food.name %></td>
+    <td><%= food.measurement_unit %></td>
+    <td><%= food.price %></td>
+    <td>
+      <%= button_to "Remove", food, method: :delete, class: "delete-link" %>
+    </td>
+
+</tr>
