Fix adding ingredient

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -41,7 +41,7 @@
           <td><%= recipe_food.quantity %> <%= recipe_food.food.measurement_unit %></td>
           <td>$ <%= recipe_food.value %></td>
           <td>
-          <% if can? :destroy , @recipe %>
+          <% if @recipe.user == current_user %>
           <div class="row btns">
             <%= link_to "Modify", edit_recipe_recipe_food_path(recipe_id: @recipe.id, id: recipe_food.id), class: "btn-text btn-modify" %>
             <%= button_to "Remove", recipe_recipe_food_path(recipe_id: @recipe.id, id: recipe_food.id), class: "no-styling btn-text color-red", method: :delete %>
