--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,11 @@
   </head>
 
   <body>
+  <div class="overlay">
   <header> <%= render partial: "shared/navbar" %></header>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <%= yield %>
+  </div>
 </body>
 </html>
