--- a/app/views/recipes/_recipe2.html.erb
+++ b/app/views/recipes/_recipe2.html.erb
@@ -6,16 +6,17 @@
 
   </div>
     <p class="recipe_description2">
-      <%= recipe.description %>
+      Description: <%= recipe.description %>
     </p>
     <%= form_with(model: recipe, id: "recipe_form") do |form| %>
-      <div class="form_group">
+      <div class="form_group save-public">
         <%= form.label :public_recipe, style: "display: block", class: "form_label" do %>
           Public recipe:
           <%= form.check_box :public_recipe, id: "recipe_public_recipe", class: "form_check_input" %>
         <% end %>
+        <%= form.submit "Save", class: "save-button" %>
       </div>
-      <%= form.submit "Save" %>
+      
     <% end %>
 
 </div>
