Add more styling

--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -3,7 +3,7 @@
     <td><%= food.measurement_unit %></td>
     <td><%= food.price %></td>
     <td>
-      <%= button_to "Remove", food, method: :delete, class: "delete-link" %>
+      <%= button_to "Remove", food, method: :delete, class: "delete-button delete-food" %>
     </td>
 
 </tr>
