--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,12 +1,9 @@
 
 
   <div class="foood-container">
-    
- 
-        <p class="notice"><%= notice %></p>
 
         <div class="foods">
-        <%= button_to "Add Food", new_food_path, method: :get, class:"add-food" %>
+        <%= button_to "Add Food", new_food_path, method: :get, class:"save-button add-food" %>
         <table class="food-table">
             <tr>
             <th>Food</th>
