--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -382,10 +382,18 @@ ul {
   padding: 1%;
 }
 
-.ingredient-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.ingredint-form-item {
+margin-top: 1em;
+padding: 1em 1em;
+}
+
+.quantity-input {
+  width: 200px;
+  margin-top: 1em;
+}
+
+.save-button2 {
+  margin-top: 20px;
 }
 
 .hr-line {
@@ -496,6 +504,11 @@ ul {
   width: 160%;
 }
 
+.foods {
+  width: 70%;
+  margin-inline: auto;
+}
+
 .food-container {
   padding: 20px;
 }
@@ -504,6 +517,7 @@ ul {
 .table td {
   padding: 10px;
   text-align: left;
+  color: white;
 }
 
 .striped-table td,
@@ -513,9 +527,11 @@ ul {
 }
 
 .food-table {
-  width: 60%;
+  width: 100%;
   border-collapse: collapse;
   margin-top: 20px;
+  margin-inline: auto;
+  font-size: 1.5em;
 }
 
 .food-table th,
@@ -529,13 +545,21 @@ ul {
   background-color: #f2f2f2;
 }
 
+.food-table td {
+  color: white;
+}
+
 .food-table td:last-child {
   text-align: center;
 }
 
 .add-food {
-  display: block;
-  margin-bottom: 20px;
+  border: none;
+  padding: 0.5em 1em;
+}
+
+.delete-food {
+  margin-left: -100px;
 }
 
 .form-container {
