--- a/app/views/recipe_foods/new.html.erb
+++ b/app/views/recipe_foods/new.html.erb
@@ -20,15 +20,16 @@
       </div>
     <% end %>
 
-    <div class=""> 
-    <%= form.label :name, "Select a food:" %><br/>
+    <div class="ingredient-form"> 
+    <%= form.label :name, "Select a food:", class: "ingredint-form-item" %>
     <%= form.select :id, 
       options_for_select(@foods.map { |f| [f.name, f.id] }), 
-      {}, { class: "input-default" } %>
-      <%= form.label :quantity, placeholder: "10 'kg'.." %>
-      <%= form.number_field :quantity, class: "form--input" %>
+      {}, { class: "ingredint-form-item" } %><br>
+      <%= form.label :quantity, placeholder: "10 'kg'..",class: "ingredint-form-item" %>
+      <%= form.number_field :quantity, class: "quantity-input" %>
+      <br>
   
-      <%= form.submit class: "save-button" %>
+      <%= form.submit class: "save-button save-button2" %>
     </div>
   <% end %>
 </div>
