--- a/app/views/public_recipes/index.html.erb
+++ b/app/views/public_recipes/index.html.erb
@@ -8,6 +8,10 @@
               <h4 class="link"><%= link_to recipe.title, recipe_path(recipe) %></h4>
               <p class="usernames">By: <%= recipe.user.email %></p>
             </div>
+            <div>
+              <h4  class="recipe-det">Total food: <span><%= recipe.recipe_foods.length %></span></h4>
+              <h4  class="recipe-det">Total price: <span>$<%= RecipeFood.total_price(recipe.recipe_foods) %></span></h4>
+            </div>
       </div>
     <% end %>
   <% end %>
