--- a/app/views/shopping_lists/index.html.erb
+++ b/app/views/shopping_lists/index.html.erb
@@ -18,9 +18,9 @@
     </tr>
     <% @shop_list.each do |recipe_food| %>
       <tr>
-        <td><%= recipe_food.name %></td>
-        <td><%= recipe_food.quantity %></td>
-        <td><%= recipe_food.price %></td>
+        <td class="list"><%= recipe_food.name %></td>
+        <td class="list"><%= recipe_food.quantity %></td>
+        <td class="list"><%= recipe_food.price %></td>
       </tr>
     <% end %>
 
