--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,19 +1,3 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
-
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
 
 * {
@@ -288,6 +272,8 @@ input {
   font-weight: bold;
   margin-bottom: 5%;
   color: white;
+  width: 100%;
+  display: grid;
 }
 
 ul {
@@ -560,6 +546,7 @@ ul {
 .add-food {
   border: none;
   padding: 0.5em 1em;
+  margin-left: 80%;
 }
 
 .delete-food {
@@ -759,7 +746,11 @@ ul {
 }
 
 .table th {
-  background-color: #eee;
+  background-color: #8d8d8d;
+}
+
+.list {
+  background-color: #2d545e;
 }
 
 .table-header {
@@ -947,4 +938,55 @@ input:checked + .slider::before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
+}
+
+.form_label {
+  position: absolute;
+  top: 47%;
+  left: 65%;
+}
+
+.LoginDetail {
+  color: black;
+}
+
+.toggle-switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+}
+
+.toggle-switch input[type="checkbox"] {
+  display: none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  transition: 0.4s;
+}
+
+input[type="checkbox"]:checked + .slider {
+  background-color: #2196f3;
+}
+
+input[type="checkbox"]:checked + .slider:before {
+  transform: translateX(20px);
 }
